# intro_to_agents_12_2_2025

./: .gitignore  CHANGES.md  DELIVERY.md  INDEX.md  PROJECT_SUMMARY.md  README.md  SAMPLE_OUTPUT.md  START_HERE.md  agentic_agent.py  agentic_agent_reviewer.py  demo.py  insert_recipes.py  matrix_agent_example.py  meeting_notes_agent.py  postgresmcp.py  recipe_extraction_agent.py  requirements.txt  your_own_agent_framework.py
long_horizon_tasks/workdir/: pyproject.toml  timebank.sqlite3
long_horizon_tasks/workdir/app/: main.py
long_horizon_tasks/workdir/app/auth/: models.py  routes.py  security.py  service.py
long_horizon_tasks/workdir/app/gateway/: authz.py  rate_limit.py  routes.py
long_horizon_tasks/workdir/app/notifications/: models.py  routes.py  service.py
long_horizon_tasks/workdir/app/storage/: db.py
long_horizon_tasks/workdir/app/time_bank/: models.py  routes.py  service.py
long_horizon_tasks/workdir/deploy/: deploy.py  env.dev  env.prod  env.staging
long_horizon_tasks/workdir/openspec/: project.md
long_horizon_tasks/workdir/openspec/specs/_meta/: README.md
long_horizon_tasks/workdir/openspec/specs/add-anti-capitalist-metrics-and-governance-for-time-bank/: proposal.md  tasks.md
long_horizon_tasks/workdir/openspec/specs/add-devops-platform-for-time-bank/: tasks.md  (+1 more)
long_horizon_tasks/workdir/tests/: conftest.py  test_devops_deployments.py  test_gateway_authz_rate_limit.py  test_health.py  test_help_sessions_ledger_balances.py  test_notifications_prefs_and_delivery.py  test_time_bank_core.py  test_user_auth.py  test_volunteer_and_moderation.py
(+47 files in other folders)
